# mab-ecommerce-optimizer

./: .dockerignore  .env.example  .gitignore  DEPLOY_INSTRUCTIONS.md  README.md  benchmark_strategies.py  convergence_test_results.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
bandit_api/: Dockerfile  __init__.py  lambda_handler.py  main.py  models.py  settings.py
bandit_api/routers/: config.py  experiments.py
bandit_api/state/: __init__.py  keys.py  redis_store.py
bandit_api/strategies/: __init__.py  factory.py
bandit_core/: __init__.py
bandit_core/sim/: __init__.py  synthetic.py
bandit_core/state/: __init__.py  base.py  memory.py
bandit_core/strategies/: __init__.py  base.py  epsilon_greedy.py  thompson.py  ucb1.py
dashboard/: Dockerfile  app.py  dashboard.py  redis_client.py
infra/sam/: Dockerfile.lambda  samconfig.toml  template.yaml
tests/: locustfile.py  results_stats.csv  results_stats_history.csv  test_api.py  test_api_endpoints.py  test_convergence.py  test_phase1_core.py  test_simulation.py  test_state_store.py  test_strategies.py  test_strategy_factory.py
